18. Prioritise browsed menu role when allocating a release to a release type -
    thanks to Darrell.
19. Try to work-around issues with volume dialog closing immediately.
20. Add a server-side option to disable showing list of works when showing an
    artist's releases.
21. Place 'Show image' after 'Copy details' in now-playing context menu, to be
    consistent with browse menus.

5.7.6
-----
1. If images are removed from a list item then also remove 'Show image'
   action.
2. Fix missing 'Play next' and 'Append to queue' actions when showing covers
   of online service albums via 'Show image' action.
3. Allow specifying a list of player IDs to hide via 'hidePlayers=a,b' URL
   query parameter.
4. Fix issues when closing 'Search within list' on iOS devices.
5. Update Lyrion forums link in 'Information' dialog.

5.7.5
-----
1. Fix not being able to toggle a player in sync dialog.
2. Fix dropping external files onto queue.
3. Fix colour of 'Other settings' header in 'Player' settings dialog.

5.7.4
-----
1. Fix oddities with group volume dialog.
2. Close other dialogs via click outside.

5.7.3
-----
1. Re-add fix to not use custom select library for multi-select lists.
2. Try not to switch to MAI view when swiping on track info that needs to be
   scrolled.
3. Add down arrow next to player name in 'Player' settings dialogs, if more
   than 1 player.
4. Close volume popups if click outside.
5. Remove 'Material Skin (Party)' from LMS skins list, causes to much
   confusion.

5.7.2
-----
 1. Re-add custom select library, but disable for 'Custom Skip'.
 2. Handle case where there is an 'Other' group at start of release.
 3. Don't use solid colour for 'Save Settings' button as some colours (if set
    from cover) can cause poor contrast.
 4. Prevent flash of blue when activating a select menu in settings pages on
    touch devices.
 5. Fix clipping of covers in grid view.
 6. Fix adding, and removing, tracks from favourites via now-playing.